# FinalProject

./: .gitignore  pyproject.toml
app/authenticate/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
app/companies/: admin.py  models.py  serializers.py  urls.py  views.py
app/core/: settings.py  urls.py
app/storages/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
